@@ -1,22 +1,0 @@
-{
-    "configurations": [
-        {
-            "name": "Linux",
-            "includePath": [
-                "${default}",
-                "/opt/devkitpro/devkitARM/arm-none-eabi/include",
-                "/opt/devkitpro/libctru/include",
-                "${workspaceFolder}/3rd",
-                "${workspaceFolder}"
-            ],
-            "defines": [
-                "USE_SETTINGS_H"
-            ],
-            "compilerPath": "/usr/bin/gcc",
-            "cStandard": "c11",
-            "cppStandard": "c++14",
-            "intelliSenseMode": "gcc-x64"
-        }
-    ],
-    "version": 4
-}
