@@ -1,67 +1,0 @@
-{
-	"C_Cpp.default.includePath": [
-		"${default}",
-		"${workspaceFolder}/include",
-		"${workspaceFolder}/common",
-		"/opt/devkitpro/devkitARM/arm-none-eabi/include",
-		"/opt/devkitpro/libctru/include",
-	],
-	"files.associations": {
-		"*.ui": "xml",
-		"*.qrc": "xml",
-		"array": "cpp",
-		"atomic": "cpp",
-		"bit": "cpp",
-		"*.tcc": "cpp",
-		"cctype": "cpp",
-		"clocale": "cpp",
-		"cmath": "cpp",
-		"compare": "cpp",
-		"concepts": "cpp",
-		"cstdarg": "cpp",
-		"cstddef": "cpp",
-		"cstdint": "cpp",
-		"cstdio": "cpp",
-		"cstdlib": "cpp",
-		"cstring": "cpp",
-		"cwchar": "cpp",
-		"cwctype": "cpp",
-		"deque": "cpp",
-		"map": "cpp",
-		"unordered_map": "cpp",
-		"vector": "cpp",
-		"exception": "cpp",
-		"algorithm": "cpp",
-		"functional": "cpp",
-		"iterator": "cpp",
-		"memory": "cpp",
-		"memory_resource": "cpp",
-		"numeric": "cpp",
-		"optional": "cpp",
-		"random": "cpp",
-		"string": "cpp",
-		"string_view": "cpp",
-		"system_error": "cpp",
-		"tuple": "cpp",
-		"type_traits": "cpp",
-		"utility": "cpp",
-		"fstream": "cpp",
-		"initializer_list": "cpp",
-		"iosfwd": "cpp",
-		"iostream": "cpp",
-		"istream": "cpp",
-		"limits": "cpp",
-		"new": "cpp",
-		"ostream": "cpp",
-		"ranges": "cpp",
-		"sstream": "cpp",
-		"stdexcept": "cpp",
-		"streambuf": "cpp",
-		"typeinfo": "cpp",
-		"forward_list": "cpp",
-		"list": "cpp",
-		"cinttypes": "cpp",
-		"valarray": "cpp",
-		"mutex": "cpp"
-	}
-}
