@@ -67,8 +67,8 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			[str::fmt_24h] = "24 hour", /* context: time format */
 			[str::fmt_12h] = "12 hour", /* context: time format */
 			[str::unknown] = "unknown", /* context: unknown setting */
-			[str::btrue] = "true", /* context: setting is set to ON */
-			[str::bfalse] = "false", /* context: setting is set to OFF */
+			[str::btrue] = "true", /* context: setting is set to ON */ /* unused */
+			[str::bfalse] = "false", /* context: setting is set to OFF */ /* unused */
 			[str::top] = "top", /* context: top screen in progress bar location settings switcher */
 			[str::bottom] = "bottom", /* context: bottom screen in progress bar location settings switcher */
 			[str::light_mode] = "Light mode",
@@ -212,8 +212,8 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			[str::fmt_24h] = "24 uur",
 			[str::fmt_12h] = "12 uur",
 			[str::unknown] = "onbekend",
-			[str::btrue] = "waar",
-			[str::bfalse] = "niet waar",
+			[str::btrue] = "waar", /* unused */
+			[str::bfalse] = "niet waar", /* unused */
 			[str::top] = "boven",
 			[str::bottom] = "onder",
 			[str::light_mode] = "Licht thema",
@@ -356,8 +356,8 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			[str::fmt_24h] = "24-Stunden-Zeit",
 			[str::fmt_12h] = "12-Stunden-Zeit",
 			[str::unknown] = "unbekannt",
-			[str::btrue] = "Ja",
-			[str::bfalse] = "Nein",
+			[str::btrue] = "Ja", /* unused */
+			[str::bfalse] = "Nein", /* unused */
 			[str::top] = "Oben",
 			[str::bottom] = "Unten",
 			[str::light_mode] = "Helles Design",
@@ -501,8 +501,8 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			[str::fmt_24h] = "24 horas",
 			[str::fmt_12h] = "12 horas",
 			[str::unknown] = "Desconocido",
-			[str::btrue] = "Verdadero",
-			[str::bfalse] = "Falso",
+			[str::btrue] = "Verdadero", /* unused */
+			[str::bfalse] = "Falso", /* unused */
 			[str::top] = "Superior",
 			[str::bottom] = "Inferior",
 			[str::light_mode] = "Modo luz",
@@ -646,8 +646,8 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			[str::fmt_24h] = "24 heures",
 			[str::fmt_12h] = "12 heures",
 			[str::unknown] = "inconnu",
-			[str::btrue] = "vrai",
-			[str::bfalse] = "faux",
+			[str::btrue] = "vrai", /* unused */
+			[str::bfalse] = "faux", /* unused */
 			[str::top] = "haut",
 			[str::bottom] = "bas",
 			[str::light_mode] = "Thème clair",
@@ -791,8 +791,8 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			[str::fmt_24h] = "24 heures",
 			[str::fmt_12h] = "12 heures",
 			[str::unknown] = "Inconnu",
-			[str::btrue] = "Vrai",
-			[str::bfalse] = "Faux",
+			[str::btrue] = "Vrai", /* unused */
+			[str::bfalse] = "Faux", /* unused */
 			[str::top] = "En haut",
 			[str::bottom] = "En bas",
 			[str::light_mode] = "Mode clair",
@@ -936,8 +936,8 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			[str::fmt_24h] = "24 de ore",
 			[str::fmt_12h] = "12 ore",
 			[str::unknown] = "necunoscut/ă",
-			[str::btrue] = "adevărat",
-			[str::bfalse] = "fals",
+			[str::btrue] = "adevărat", /* unused */
+			[str::bfalse] = "fals", /* unused */
 			[str::top] = "sus",
 			[str::bottom] = "jos",
 			[str::light_mode] = "Mod luminos",
@@ -1081,8 +1081,8 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			[str::fmt_24h] = "24 ore",
 			[str::fmt_12h] = "12 ore",
 			[str::unknown] = "sconosciuto",  //"sconosciuta" may fit the context better.
-			[str::btrue] = "sì",
-			[str::bfalse] = "no",
+			[str::btrue] = "sì", /* unused */
+			[str::bfalse] = "no", /* unused */
 			[str::top] = "superiore",
 			[str::bottom] = "inferiore",
 			[str::light_mode] = "Modalità chiara",
@@ -1226,8 +1226,8 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			[str::fmt_24h] = "24 horas", /* context: time format */
 			[str::fmt_12h] = "12 horas", /* context: time format */
 			[str::unknown] = "desconhecido", /* context: unknown setting */
-			[str::btrue] = "ligado", /* context: setting is set to ON */
-			[str::bfalse] = "desligado", /* context: setting is set to OFF */
+			[str::btrue] = "ligado", /* context: setting is set to ON */ /* unused */
+			[str::bfalse] = "desligado", /* context: setting is set to OFF */ /* unused */
 			[str::top] = "cima", /* context: top screen */
 			[str::bottom] = "baixo", /* context: bottom screen */
 			[str::light_mode] = "Modo escuro",
@@ -1372,8 +1372,8 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			[str::fmt_24h] = "24시간 형식", /* context: time format */
 			[str::fmt_12h] = "12시간 형식", /* context: time format */
 			[str::unknown] = "unknown", /* context: unknown setting */
-			[str::btrue] = "켜짐", /* context: setting is set to ON */
-			[str::bfalse] = "꺼짐", /* context: setting is set to OFF */
+			[str::btrue] = "켜짐", /* context: setting is set to ON */ /* unused */
+			[str::bfalse] = "꺼짐", /* context: setting is set to OFF */ /* unused */
 			[str::top] = "위", /* context: top screen */
 			[str::bottom] = "아래", /* context: bottom screen */
 			[str::light_mode] = "밝은 테마",
@@ -1517,8 +1517,8 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			[str::fmt_24h] = "24-ώρο",
 			[str::fmt_12h] = "12-ώρο",
 			[str::unknown] = "άγνωστο",
-			[str::btrue] = "αληθές",
-			[str::bfalse] = "ψευδές",
+			[str::btrue] = "αληθές", /* unused */
+			[str::bfalse] = "ψευδές", /* unused */
 			[str::top] = "πάνω οθόνη",
 			[str::bottom] = "κάτω οθόνη",
 			[str::light_mode] = "Ανοιχτόχρωμη λειτουργία",
